--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,7 +30,7 @@
     {% sections 'header-group' %}
 
     {{ content_for_layout }}
-
+    Test Layout
     {% sections 'footer-group' %}
   </body>
 </html>
