--- a/assets/gobal.css
+++ b/assets/gobal.css
@@ -1,6 +1,7 @@
 .container-width {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 50px;
+    margin: auto 50px;
 }
