--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,6 +20,7 @@
     {% # Load and preload the critical CSS %}
     {{ 'critical.css' | asset_url | stylesheet_tag: preload: true }}
     {{ 'gobal.css' | asset_url | stylesheet_tag }}
+    {{ "slider.css" | asset_url | stylesheet_tag }}
 
     {% # Social, title, etc. %}
     {% render 'meta-tags' %}
@@ -33,5 +34,6 @@
     {{ content_for_layout }}
     Test Layout
     {% sections 'footer-group' %}
+    {% comment %} {{ 'slider.js' | asset_url | script_tag }} {% endcomment %}
   </body>
 </html>
