fetured collection set

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -19,7 +19,7 @@
 
     {% # Load and preload the critical CSS %}
     {{ 'critical.css' | asset_url | stylesheet_tag: preload: true }}
-    {{ 'gobal.css' | asset_url | stylesheet_tag }}
+    {{ 'global.css' | asset_url | stylesheet_tag }}
     {{ "slider.css" | asset_url | stylesheet_tag }}
 
     {% # Social, title, etc. %}
